fix: character name overflow (#20)

--- a/src/components/character-card/character-card.css
+++ b/src/components/character-card/character-card.css
@@ -25,7 +25,7 @@
   display: flex;
   max-height: var(--info-height);
   min-height: var(--info-height);
-  overflow: auto;
+  overflow: hidden;
   padding: 1rem;
   transition: background-size 0.25s linear;
 }
@@ -44,11 +44,14 @@
 
 .character-card__info h2 {
   color: var(--white);
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
   flex-basis: auto;
   font-size: 0.8rem;
   font-weight: 400;
   margin: 0 auto 0 0;
-  overflow: auto;
+  overflow: hidden;
   text-overflow: ellipsis;
 }
 
